--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 		<!--!customers-->
 		<section class="section">
 			<div class="container">
-				<h2 class="customers-title">Постійні клієнти</h2>
+				<h2 class="section-title">Постійні клієнти</h2>
 				<ul class="customers-list list">
 					<li>
 						<a class="customers-list__link" href="#" target="_blank" rel="noopener noreferrer">
