--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
 	<link
 		href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
 		rel="stylesheet" />
-
-	<link rel="stylesheet" href="./css/styles.css" />
 	<link rel="stylesheet" href="./css/main.min.css" />
 </head>
 
@@ -375,7 +373,7 @@
 					<textarea class="modal-textarea" placeholder="Введіть текст" name="comit" id="comit" cols="30"
 						rows="10"></textarea>
 				</label>
-				<label class="modai-checkbox__label" for="checkbox">
+				<label class="modal-checkbox__label" for="checkbox">
 					<input class="modal-checkbox hidden" type="checkbox" name="checkbox" id="checkbox" />
 					<span class="modal-checkbox__title"></span>
 					Погоджуюся з розсилкою та приймаю
