--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 				<ul class="team-list list">
 					<li class="team-list__item">
 						<img src="./images/jpg3.jpg" alt="product_designer" width="270" />
-						<div class="team-section">
+						<div class="team-list__team-section">
 							<h3 class="team-list__title">Ігор Дем'яненко</h3>
 							<p class="team-list__text">Product Designer</p>
 							<ul class="team-list__social list">
@@ -181,7 +181,7 @@
 					</li>
 					<li class="team-list__item">
 						<img src="./images/jpg4.jpg" alt="frontend_developer" width="270" />
-						<div class="team-section">
+						<div class="team-list__team-section">
 							<h3 class="team-list__title">Ольга Рєпіна</h3>
 							<p class="team-list__text">Frontend Developer</p>
 							<ul class="team-list__social list">
@@ -215,7 +215,7 @@
 					</li>
 					<li class="team-list__item">
 						<img src="./images/jpg5.jpg" alt="marketing" width="270" />
-						<div class="team-section">
+						<div class="team-list__team-section">
 							<h3 class="team-list__title">Микола Тарасов</h3>
 							<p class="team-list__text">Marketing</p>
 							<ul class="team-list__social list">
@@ -249,7 +249,7 @@
 					</li>
 					<li class="team-list__item">
 						<img src="./images/jpg6.jpg" alt="ui_designer" width="270" />
-						<div class="team-section">
+						<div class="team-list__team-section">
 							<h3 class="team-list__title">Михайло Єрмаков</h3>
 							<p class="team-list__text">UI Designer</p>
 							<ul class="team-list__social list">
@@ -399,7 +399,7 @@
 						м. Київ, пр-т Лесі Українки, 26</a>
 					<ul class="footer-contact__list list">
 						<li>
-							<a class="footer-contact__link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+							<a class="footer-contact__link post" href="mailto:info@devstudio.com">info@devstudio.com</a>
 						</li>
 						<li>
 							<a class="footer-contact__link" href="tel:+380961111111">+38 096 111 11 11</a>
