--- a/portfolio.html
+++ b/portfolio.html
@@ -228,7 +228,7 @@
 						м. Київ, пр-т Лесі Українки, 26</a>
 					<ul class="footer-contact__list list">
 						<li>
-							<a class="footer-contact__link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+							<a class="footer-contact__link post" href="mailto:info@devstudio.com">info@devstudio.com</a>
 						</li>
 						<li>
 							<a class="footer-contact__link" href="tel:+380961111111">+38 096 111 11 11</a>
